css/main.css
/* ... */
.instatude_services .cards .card:hover{
  cursor: pointer;
  transform: translateY(-10px);
  border: 3px solid var(--primary-100);
}
.instatude_services .cards .card img{
  width: 100%;
}
.instatude_services .cards .card h3{
  font-weight: 600;
  color: var(--text-100);
}
@media screen and (max-width: 767px){
  .instatude_services{
    width: 90%;
  }
}

/* Statistics */
.Statistics{
  margin: 3rem 0 5rem 0;
  width: 100%;
  padding: 3rem 0;
  background-color: var(--primary-100);
}
.Statistics .num_text h2{
  font-size: 50px;
  font-weight: normal;
  color: var(--text-300);
}
.Statistics .num_text h3{
  font-weight: 600;
  color: var(--text-100);
}

/* !Stick */
.sticky{
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 999;
  margin: 0;
  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
}

/* !BtnToTop */
.btnTop{
  position: absolute;
  bottom: 20px;
  right: 20px;
  background-color: var(--primary-100);
  padding: 15px;
  border-radius: 50%;
  cursor: pointer;
  color: var(--text-300);
  z-index: 3;
  position: fixed;
  display: none;
  transition: all 0.3s ease;
}
.btnTop:hover{
  transform: translateY(-5px);
}

